@@ -257,6 +257,7 @@ Views 3.x-7.x-dev
     o #807506 by damZ: Improve the usefulness of ViewsSqlTest.
     o #807510 by damZ: Test sort handler.
     o by dereine: Move views_test.created field to viewsSqlTest.
+    o by dereine: Test views_handler_field_boolean.
 
 Views 6.x-3.x-dev
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
